# shortener

./: .gitignore  README.md  app.cfg.example  docker-compose.yml  shortener.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/: Lib.hs
src/Shortener/: Api.hs  Config.hs  Database.hs  Lib.hs  Schema.hs  Token.hs
static/: index.html
static/js/: api.js  app.js
test/: Spec.hs
test/Shortener/: AppSpec.hs  ConfigSpec.hs
test/fixtures/config/: valid.cfg
