name:                shortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/keveri/shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
maintainer:          matias@keveri.fi
copyright:           2019 Matias Keveri
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shortener.Lib
                     , Shortener.Config
                     , Shortener.Database
                     , Shortener.Schema
                     , Shortener.Token
  other-modules:       Shortener.Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , configurator
                     , interpolate
                     , monad-logger
                     , mtl
                     , servant-server
                     , servant-js
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , string-random
                     , text
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable shortener-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shortener
  default-language:    Haskell2010

test-suite shortener-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Shortener.AppSpec
                     , Shortener.ConfigSpec
  build-depends:       base
                     , shortener
                     , bytestring
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , wai-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keveri/shortener
